@@ -247,6 +247,7 @@ class Action {
 };
 
 // Returns new nodes for each major mode.
+std::unique_ptr<Mode> BuildClusterMode();
 std::unique_ptr<Mode> BuildFsMode();
 std::unique_ptr<Mode> BuildPbcMode();
 std::unique_ptr<Mode> BuildTabletMode();
